--- a/_config.yml
+++ b/_config.yml
@@ -8,14 +8,14 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
-tagline: Site Tagline
+title : Tyler Chadwick's Blog
+tagline: Definitely Not Satire
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
-  feedburner : feedname
+  name : Tyler Chadwick
+  email : info@tylerchadwick.com
+  github : chadwickthebold
+  twitter : chadwickthebold
+  feedburner :
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
